--- a/code/static/css/timeline.css
+++ b/code/static/css/timeline.css
@@ -1,5 +1,4 @@
 .timelineBackground {
-  position: relative; }
-  .timelineBackground img {
-    width: 100%;
-    height: 100%; }
+  background-color: #f2f2f2 !important; }
+  .timelineBackground .space {
+    height: 50px; }
