--- a/code/source/pug/myself.pug
+++ b/code/source/pug/myself.pug
@@ -16,7 +16,7 @@ md-content(ng-cloak ng-controller='myselfController as mc', style='height: 100%;
         div.attribute 关注
         div.value {{mc.userInfomation.numberOfFollowers}}
   md-divider
-  md-tabs(md-dynamic-height md-border-bottom, md-stretch-tabs='yes', style='height: 100%')
+  md-tabs(md-dynamic-height md-border-bottom, md-stretch-tabs='yes')
     md-tab
       md-tab-label
         md-icon(md-svg-icon='../svg/timeline.svg')
