--- a/code/source/sass/timeline.sass
+++ b/code/source/sass/timeline.sass
@@ -1,6 +1,5 @@
 .timelineBackground
-  position: relative
+  background-color: #f2f2f2 !important
 
-  img
-    width: 100%
-    height: 100%
+  .space
+    height: 50px
