--- a/code/static/css/others.css
+++ b/code/static/css/others.css
@@ -1,25 +1,35 @@
+.friends {
+  height: 12%;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.avatarContainer {
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.userAvatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%; }
+
 .content {
-  height: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 10%;
-  padding-bottom: 30%; }
+  height: 80%;
+  padding-left: 10px;
+  padding-right: 10px; }
 
 .cardContainer {
-  height: 100%;
   padding-left: 10px;
   padding-right: 10px; }
 
 .card {
-  width: 220px;
-  height: 330px;
-  padding: 10px;
-  padding-top: 0; }
+  width: 260px;
+  height: 390px; }
 
 .cardHeader {
-  width: 100%;
   height: 20%;
-  padding: 0; }
+  padding: 0;
+  padding-left: 5%;
+  padding-right: 5%; }
 
 .cardAvatar {
   width: 36px;
@@ -27,7 +37,6 @@
   border-radius: 50%; }
 
 .cardImg {
-  width: 100%;
   height: 50%;
   background-size: cover; }
 
@@ -35,18 +44,17 @@
   height: 3%; }
 
 .cardContent {
-  width: 100%;
   height: 12%;
-  padding: 0; }
+  padding: 0;
+  padding-left: 5%;
+  padding-right: 5%; }
 
 .time {
-  width: 100%;
   height: 5%;
   margin: 0;
   text-align: center; }
 
 .cardFooter {
-  width: 100%;
   height: 10%;
   padding: 0; }
 
