--- a/code/source/sass/others.sass
+++ b/code/source/sass/others.sass
@@ -1,64 +1,69 @@
-.friends
-	height: 12%
-	padding-left: 10px
-	padding-right: 10px
+.othersBackground
+	background-color: #f2f2f2 !important
 
-.avatarContainer
-	padding-left: 10px
-	padding-right: 10px
+	.friends
+		height: 12%
+		padding-left: 10px
+		padding-right: 10px
+		background-color: white
 
-.userAvatar
-	width: 40px
-	height: 40px
-	border-radius: 50%
+	.avatarContainer
+		padding-left: 10px
+		padding-right: 10px
 
-.content
-	height: 80%
-	padding-left: 10px
-	padding-right: 10px
+	.userAvatar
+		width: 40px
+		height: 40px
+		border-radius: 50%
 
-.cardContainer
-	padding-left: 10px
-	padding-right: 10px
+	.content
+		height: 80%
+		padding-left: 10px
+		padding-right: 10px
+		background-color: #f2f2f2 !important
 
-.card
-	width: 260px
-	height: 390px
+	.cardContainer
+		padding-left: 10px
+		padding-right: 10px
 
-.cardHeader
-	height: 20%
-	padding: 0
-	padding-left: 5%
-	padding-right: 5%
+	.card
+		width: 260px
+		height: 390px
 
-.cardAvatar
-	width: 36px
-	height: 36px
-	border-radius: 50%
+	.cardHeader
+		height: 20%
+		padding: 0
+		padding-left: 5%
+		padding-right: 5%
 
-.cardImg
-	height: 50%
-	background-size: cover
+	.cardAvatar
+		width: 36px
+		height: 36px
+		border-radius: 50%
 
-.divider
-	height: 3%
+	.cardImg
+		height: 50%
+		background-size: cover
 
-.cardContent
-	height: 12%
-	padding: 0
-	padding-left: 5%
-	padding-right: 5%
+	.divider
+		height: 3%
 
-.time
-	height: 5%
-	margin: 0
-	text-align: center
+	.cardContent
+		height: 12%
+		padding: 0
+		padding-left: 5%
+		padding-right: 5%
 
-.cardFooter
-	height: 10%
-	padding: 0
+	.time
+		height: 5%
+		margin: 0
+		text-align: center
 
-.addButton
-	position: fixed
-	right: 12px
-	bottom: 12px
+	.cardFooter
+		height: 10%
+		padding: 0
+
+	.addButton
+		position: fixed
+		right: 12px
+		bottom: 12px
