时间轴的主要界面

--- a/code/source/pug/timeline.pug
+++ b/code/source/pug/timeline.pug
@@ -2,15 +2,20 @@ link(rel='stylesheet', href='../css/timeline.css')
 
 md-content.timelineBackground(ng-controller='timelineController as tc' ng-cloak layout='row')
   div(flex)
-    md-card.leftCards(ng-if='$index % 2 == 0' ng-repeat="item in tlitems")
-      img(ng-src='{{item.url}}')
-  div
-    md-list-item(ng-repeat="item in tlitems")
+    div(ng-repeat="item in tlitems" ng-if='$index % 2 == 0')
+      md-card.leftCards
+        div.imageContainer(style='background-image: url("{{item.url}}")')
+      div.space
+  div.timeNodeContainer
+    div.timeline
+    md-list-item.timeNode(ng-repeat="item in tlitems")
       md-button.md-fab.md-mini(aria-label="Num") {{item.day}}
   div(flex id='rightImages')
-    div.space
-    md-card.rightCards(ng-if='$index % 2 == 1' ng-repeat="item in tlitems")
-      img(ng-src='{{item.url}}')
+    div.firstSpace
+    div(ng-repeat="item in tlitems" ng-if='$index % 2 == 1')
+      md-card.rightCards
+        div.imageContainer(style='background-image: url("{{item.url}}")')
+      div.space
 
   //- canvas(id="TlCanvas")
   //- md-list(id="detailsList" layout="row" layout-align="center" layout-padding ng-repeat="item in tlitems")
