--- a/code/source/sass/timeline.sass
+++ b/code/source/sass/timeline.sass
@@ -1,5 +1,30 @@
 .timelineBackground
   background-color: #f2f2f2 !important
+  position: relative
 
+  .firstSpace
+    height: 88px
   .space
-    height: 50px
+    height: 45.3333333333px
+
+  .timeNodeContainer
+    width: 56px
+    position: relative
+
+    .timeline
+      position: absolute
+      left: 26px
+      width: 4px
+      height: 100%
+      background-color: #E91E63
+
+    .timeNode
+      position: absolute
+
+  .imageContainer
+    width: 100%
+    height: 120px
+    background-repeat: no-repeat
+    background-position: center center
+    background-size: cover
+    -webkit-background-size: cover
