修改others页面布局

--- a/code/source/pug/others.pug
+++ b/code/source/pug/others.pug
@@ -2,9 +2,10 @@ link(rel='stylesheet', type='text/css', href='../css/others.css')
 
 md-content.othersBackground(ng-controller='othersController as oc', layout='column', style='height: 100%', ng-cloak)
 	md-content.friends(layout='row')
-		div.avatarContainer(layout='column', layout-align='center center', ng-repeat='user in users')
+		div.friend(layout='column', layout-align='center center', ng-repeat='user in users')
 			md-card-avatar
 				img.userAvatar(ng-src='{{user.avatar}}')
+			span.name {{user.name}}
 	md-divider
 	md-content.content(layout='row')
 		div.cardContainer(layout='column', layout-align='center center', ng-repeat='user in users')
@@ -16,15 +17,15 @@ md-content.othersBackground(ng-controller='othersController as oc', layout='colu
 						span.md-title {{user.name}}
 				div.cardImg(style='background-image: url("{{user.picture}}")')
 				div.divider
+				span.time.md-headline {{user.time}}
 				md-card-content.cardContent
-					p {{user.text}}
-				p.time {{user.time}}
-				md-card-footer.cardFooter(layout='row', layout-align='center start')
+					span {{user.text}}
+				md-card-footer.cardFooter(layout='row', layout-align='end start')
 					md-button(class='md-icon-button' aria-label='Favorite' ng-click='toogleFavorite($index)')
 						md-icon(md-svg-icon='{{favorites[$index]}}')
 					md-button(class='md-icon-button' aria-label='Settings')
 						md-icon(md-svg-icon='../svg/menu.svg')
 					md-button(class='md-icon-button' aria-label='Share')
 						md-icon(md-svg-icon='../svg/share.svg')
-md-button.md-fab.addButton(aria-label='Add2', ng-click='oc.newPost()')
-	md-icon(md-svg-src='../svg/add.svg')
+	md-button.md-fab.addButton(aria-label='Add2', ng-click='oc.newPost()')
+		md-icon(md-svg-src='../svg/add.svg')
