--- a/code/source/sass/others.sass
+++ b/code/source/sass/others.sass
@@ -2,22 +2,26 @@
 	background-color: #f2f2f2 !important
 
 	.friends
-		height: 12%
+		height: 15%
 		padding-left: 10px
 		padding-right: 10px
 		background-color: white
 
-	.avatarContainer
+	.friend
 		padding-left: 10px
 		padding-right: 10px
 
 	.userAvatar
-		width: 40px
-		height: 40px
+		width: 48px
+		height: 48px
 		border-radius: 50%
 
+	.name
+		font-size: 12px
+		text-align: center
+
 	.content
-		height: 80%
+		height: 85%
 		padding-left: 10px
 		padding-right: 10px
 		background-color: #f2f2f2 !important
@@ -31,7 +35,7 @@
 		height: 390px
 
 	.cardHeader
-		height: 20%
+		height: 15%
 		padding: 0
 		padding-left: 5%
 		padding-right: 5%
@@ -48,16 +52,16 @@
 	.divider
 		height: 3%
 
+	.time
+		height: 10%
+		padding-left: 5%
+		padding-right: 5%
+
 	.cardContent
 		height: 12%
 		padding: 0
 		padding-left: 5%
 		padding-right: 5%
-
-	.time
-		height: 5%
-		margin: 0
-		text-align: center
 
 	.cardFooter
 		height: 10%
