独立出时间囊页面，改变时间轴数字显示

--- a/code/source/pug/layout.pug
+++ b/code/source/pug/layout.pug
@@ -43,3 +43,4 @@ html
     script(src='../js/timeline.js')
     script(src='../js/photo.js')
     script(src='../js/newPost.js')
+    script(src='../js/timeCapsule.js')
