--- a/code/source/sass/myself.sass
+++ b/code/source/sass/myself.sass
@@ -35,6 +35,13 @@
     height: 100%
 
 .addButton
-    position: fixed
-    right: 12px
-    bottom: 12px
+  position: fixed
+  right: 12px
+  bottom: 12px
+
+  .menuButton
+    padding: 0px !important
+    font-weight: normal
+    color: #525252 !important
+    font-size: 0.6em
+    min-width: 64px
