--- a/code/source/sass/others.sass
+++ b/code/source/sass/others.sass
@@ -68,6 +68,13 @@
 		padding: 0
 
 	.addButton
-		position: fixed
-		right: 12px
-		bottom: 12px
+	  position: fixed
+	  right: 12px
+	  bottom: 12px
+
+	  .menuButton
+	    padding: 0px !important
+	    font-weight: normal
+	    color: #525252 !important
+	    font-size: 0.6em
+	    min-width: 64px
