--- a/code/static/css/others.css
+++ b/code/static/css/others.css
@@ -56,3 +56,9 @@
     position: fixed;
     right: 12px;
     bottom: 12px; }
+    .othersBackground .addButton .menuButton {
+      padding: 0px !important;
+      font-weight: normal;
+      color: #525252 !important;
+      font-size: 0.6em;
+      min-width: 64px; }
