--- a/code/source/pug/newPost.pug
+++ b/code/source/pug/newPost.pug
@@ -1,20 +1,21 @@
 link(rel='stylesheet', type='text/css', href='../css/newPost.css')
 
 md-content.newPostBackground(ng-cloak ng-controller='newPostController as nc')
-  div.md-padding
-    h2.md-title.title 创建新的时间节点
   md-card
-    textarea.md-padding.simpleTextarea(rows='8', md-autofocus, placeholder='说说你想说什么吧~')
-    md-divider
-    md-button.addFriend(ng-click='showFriendsList()')
-      md-icon(md-svg-src='../svg/circleAdd.svg')
-      span 邀请好友合并节点
-    div
-      md-list-item.noright(ng-repeat='friend in friends')
-        img.md-avatar(ng-src='{{friend.avatar}}')
-        p {{friend.name}}
-        md-checkbox.md-secondary(ng-model='friend.isSelected')
-    md-divider
-    md-button.addFriend(ng-click='visitPhoto()')
-      md-icon(md-svg-src='../svg/photo.svg')
-      span 拍照或选取照片
+    md-card-title
+      h2.md-title.title 2016年12月8日
+    md-card-content.noBorder
+      md-button.noBorder(ng-click='visitPhoto()' aria-label="Add Picture")
+        img.md-card-image(ng-src="../img/add.jpg" alt="Washed Out")
+      textarea.md-padding.simpleTextarea(rows='8', md-autofocus, placeholder='说说你想说什么吧~')
+      md-divider
+      md-button.addFriend(ng-click='showFriendsList()')
+        md-icon(md-svg-src='../svg/circleAdd.svg')
+        span 邀请好友合并节点
+      div
+        md-list-item.noright(ng-repeat='friend in friends')
+          img.md-avatar(ng-src='{{friend.avatar}}')
+          p {{friend.name}}
+          md-checkbox.md-secondary(ng-model='friend.isSelected')
+      md-divider
+      
