--- a/code/source/pug/newPost.pug
+++ b/code/source/pug/newPost.pug
@@ -1,6 +1,6 @@
 link(rel='stylesheet', type='text/css', href='../css/newPost.css')
 
-md-content.newPostBackground(ng-cloak ng-controller='newPostController as nc')
+md-content.newPostBackground(ng-cloak ng-controller='newPostController as nc', style='height: 100%')
   div.md-padding
     h2.md-title.title 创建新的时间节点
   md-card
