--- a/code/source/sass/others.sass
+++ b/code/source/sass/others.sass
@@ -2,7 +2,7 @@
 	background-color: #f2f2f2 !important
 
 	.friends
-		height: 15%
+		height: 80px
 		padding-left: 10px
 		padding-right: 10px
 		background-color: white
@@ -21,7 +21,7 @@
 		text-align: center
 
 	.content
-		height: 85%
+		height: 480px
 		padding-left: 10px
 		padding-right: 10px
 		background-color: #f2f2f2 !important
