--- a/code/static/css/others.css
+++ b/code/static/css/others.css
@@ -1,7 +1,7 @@
 .othersBackground {
   background-color: #f2f2f2 !important; }
   .othersBackground .friends {
-    height: 15%;
+    height: 80px;
     padding-left: 10px;
     padding-right: 10px;
     background-color: white; }
@@ -16,7 +16,7 @@
     font-size: 12px;
     text-align: center; }
   .othersBackground .content {
-    height: 85%;
+    height: 480px;
     padding-left: 10px;
     padding-right: 10px;
     background-color: #f2f2f2 !important; }
