--- a/code/static/css/others.css
+++ b/code/static/css/others.css
@@ -6,6 +6,7 @@
     padding-right: 10px;
     background-color: white; }
   .othersBackground .friend {
+    width: 80px;
     padding-left: 10px;
     padding-right: 10px; }
   .othersBackground .userAvatar {
@@ -13,18 +14,14 @@
     height: 48px;
     border-radius: 50%; }
   .othersBackground .name {
+    width: 80px;
     font-size: 12px;
     text-align: center; }
   .othersBackground .content {
-    padding-left: 10px;
-    padding-right: 10px;
     background-color: #f2f2f2 !important; }
-  .othersBackground .cardContainer {
-    padding-left: 10px;
-    padding-right: 10px; }
   .othersBackground .card {
-    width: 260px;
-    height: 390px; }
+    height: 100%;
+    margin: 0px 8px 0px 8px; }
   .othersBackground .cardHeader {
     height: 15%;
     padding: 0;
@@ -38,6 +35,7 @@
     height: 50%;
     background-size: cover; }
   .othersBackground .divider {
+    width: 300px;
     height: 3%; }
   .othersBackground .time {
     height: 10%;
@@ -49,7 +47,7 @@
     padding-left: 5%;
     padding-right: 5%; }
   .othersBackground .cardFooter {
-    height: 10%;
+    height: 40px;
     padding: 0; }
   .othersBackground .addButton {
     position: fixed;
