--- a/code/source/sass/others.sass
+++ b/code/source/sass/others.sass
@@ -8,6 +8,7 @@
 		background-color: white
 
 	.friend
+		width: 80px
 		padding-left: 10px
 		padding-right: 10px
 
@@ -17,21 +18,16 @@
 		border-radius: 50%
 
 	.name
+		width: 80px
 		font-size: 12px
 		text-align: center
 
 	.content
-		padding-left: 10px
-		padding-right: 10px
 		background-color: #f2f2f2 !important
 
-	.cardContainer
-		padding-left: 10px
-		padding-right: 10px
-
 	.card
-		width: 260px
-		height: 390px
+		height: 100%
+		margin: 0px 8px 0px 8px
 
 	.cardHeader
 		height: 15%
@@ -49,6 +45,7 @@
 		background-size: cover
 
 	.divider
+		width: 300px
 		height: 3%
 
 	.time
@@ -63,7 +60,7 @@
 		padding-right: 5%
 
 	.cardFooter
-		height: 10%
+		height: 40px
 		padding: 0
 
 	.addButton
