--- a/code/source/sass/others.sass
+++ b/code/source/sass/others.sass
@@ -1,16 +1,14 @@
-.othersBackground
+.others
+	height: 100%
 	background-color: #f2f2f2 !important
 
-	.friends
-		height: 80px
+	.padding
 		padding-left: 10px
 		padding-right: 10px
-		background-color: white
 
-	.friend
-		width: 72px
-		padding-left: 4px
-		padding-right: 4px
+	.backgroundWhite
+		height: 80px
+		background-color: white
 
 	.userAvatar
 		width: 48px
@@ -18,59 +16,33 @@
 		border-radius: 50%
 
 	.name
-		width: 72px
 		font-size: 12px
 		text-align: center
 
-	.content
+	.backgroundGray
 		background-color: #f2f2f2 !important
 
 	.card
-		height: 100%
-		margin: 0px 12px 0px 12px
-
-	.cardHeader
-		height: 15%
-		padding: 0
-		padding-left: 5%
-		padding-right: 5%
+		width: 260px
+		height: 390px
 
 	.cardAvatar
-		width: 36px
-		height: 36px
+		width: 40px
+		height: 40px
 		border-radius: 50%
 
 	.cardImg
 		height: 50%
 		background-size: cover
 
-	.divider
-		width: 300px
-		height: 3%
-
-	.time
-		height: 10%
-		padding-left: 5%
-		padding-right: 5%
-
-	.cardContent
-		height: 12%
-		padding: 0
-		padding-left: 5%
-		padding-right: 5%
-
-	.cardFooter
-		height: 40px
-		padding: 0
-
 	.addButton
-	  position: fixed
-	  right: 12px
-	  bottom: 12px
+		position: fixed
+		right: 12px
+		bottom: 12px
 
-	  .menuButton
-	    padding: 0px !important
-	    font-weight: normal
-	    color: #525252 !important
-	    font-size: 0.6em
-	    min-width: 64px
+		.menuButton
+			padding: 0px !important
+			font-weight: normal
+			color: #525252 !important
+			font-size: 0.6em
+			min-width: 64px
