重构 others 达到自适应
但是有图片在安卓机上不加载的问题

--- a/code/source/sass/others.sass
+++ b/code/source/sass/others.sass
@@ -1,48 +1,64 @@
-.others
-	height: 100%
-	background-color: #f2f2f2 !important
+.othersBackground
+  background-color: #f2f2f2 !important
 
-	.padding
-		padding-left: 10px
-		padding-right: 10px
+  .othersToolbar
+    background-color: #ffffff !important
+    height: 88px
+    color: #525252 !important
+    overflow: scroll !important
 
-	.backgroundWhite
-		height: 80px
-		background-color: white
+    .userContainer
+      text-align: center
+      margin: 0px 8px 0px 8px
 
-	.userAvatar
-		width: 48px
-		height: 48px
-		border-radius: 50%
+      .avatar
+        width: 48px
+        height: 48px
+        border-radius: 24px
+      .name
+        height: 24px
+        font-size: 0.7em
+        text-align: center
 
-	.name
-		font-size: 12px
-		text-align: center
+  .cardContainer
+    width: 100%
+    background-color: #f2f2f2 !important
 
-	.backgroundGray
-		background-color: #f2f2f2 !important
+    .space
+      width: 280px
 
-	.card
-		width: 260px
-		height: 390px
+    md-card-header
+      height: 40px
 
-	.cardAvatar
-		width: 40px
-		height: 40px
-		border-radius: 50%
+      .avatar
+        height: 40px
+        width: 40px
+        border-radius: 20px
 
-	.cardImg
-		height: 50%
-		background-size: cover
+      .username
+        font-size: 1.16em
+        color: #525252
+        line-height: 40px
+        padding: 0px 0px 0px 16px
 
-	.addButton
-		position: fixed
-		right: 12px
-		bottom: 12px
+  .cardImg
+    height: 50%
+    background-size: cover
 
-		.menuButton
-			padding: 0px !important
-			font-weight: normal
-			color: #525252 !important
-			font-size: 0.6em
-			min-width: 64px
+  md-card-content
+    color: #525252 !important
+
+    p
+      font-size: 1.16em
+
+  .addButton
+    position: fixed
+    right: 12px
+    bottom: 12px
+		
+    .menuButton
+      padding: 0px !important
+      font-weight: normal
+      color: #525252 !important
+      font-size: 0.6em
+      min-width: 64px
