--- a/code/source/pug/others.pug
+++ b/code/source/pug/others.pug
@@ -1,36 +1,31 @@
-link(rel='stylesheet', type='text/css', href='../css/others.css')
+link(rel="stylesheet" type="text/css" href="../css/others.css")
 
-md-content.others(ng-controller='othersController as oc', layout='column', ng-cloak)
-	md-content.padding.backgroundWhite(layout='row', layout-align='start center')
-		div.padding(flex='none', ng-repeat='user in users')
-			img.userAvatar(ng-src='{{user.avatar}}')
-			div.name {{user.name}}
-	md-divider
-	md-content.padding.backgroundGray(layout='row', flex='noshrink', layout-align='start center')
-		div.padding(flex='none', ng-repeat='user in users')
-			md-card.card
-				md-card-header(layout-align='start center')
-					md-card-avatar
-						img.cardAvatar(ng-src='{{user.avatar}}')
-					md-card-header-text
-						span.md-title {{user.name}}
-				div.cardImg(style='background-image: url("{{user.picture}}")')
-				md-card-title
-					md-card-title-text
-						span.md-headline {{user.time}}
-				md-card-content
-					p {{user.text}}
-				md-card-actions(layout='row', layout-align='end start')
-					md-button(class='md-icon-button' aria-label='Favorite' ng-click='toogleFavorite($index)')
-						md-icon(md-svg-icon='{{favorites[$index]}}')
-					md-button(class='md-icon-button' aria-label='Settings')
-						md-icon(md-svg-icon='../svg/menu.svg')
-					md-button(class='md-icon-button' aria-label='Share')
-						md-icon(md-svg-icon='../svg/share.svg')
-	md-fab-speed-dial.addButton(md-open="false" md-direction="up" class="md-scale")
-		md-fab-trigger
-			md-button.md-fab(aria-label="menu")
-				md-icon(md-svg-src="../svg/whiteMenu.svg")
-		md-fab-actions
-			md-button.md-raised.menuButton(ng-click='oc.newPost()') 添加结点
-			md-button.md-raised.menuButton(ng-click='oc.timeCapsule()') 时间囊
+md-content.othersBackground(ng-controller="othersController as oc" style="height: 100%" ng-cloak)
+  div(style="width: 100%; overflow: scroll")
+    md-content.md-whiteframe-1dp.othersToolbar.md-padding(layout="row" style="width: {{users.length * 64 + 16}}px")
+      div.userContainer(ng-repeat="user in users")
+        img.avatar(ng-src="{{user.avatar}}")
+        span.name {{user.name}}
+
+  md-content.cardContainer(style="height: calc(100% - 144px); width: 100%")
+    div(style="width: {{users.length * 296}}px; height: 100%" layout="column")
+      div(style="height: 10%")
+      div(style="height: 80%" layout="row")
+        md-card.cards(ng-repeat="user in users" style="height: 100%")
+          div.space
+          md-card-header
+            md-card-avatar
+              img.avatar(src="{{user.avatar}}")
+            md-card-header-text
+              span.username {{user.name}}
+          div.cardImg(style="background-image: url('{{user.picture}}');")
+          md-card-content {{user.time}}
+            p {{user.text}}
+      div(style="height: 10%")
+  md-fab-speed-dial.addButton.md-scale(md-open="false" md-direction="up")
+    md-fab-trigger
+      md-button.md-fab(aria-label="menu")
+        md-icon(md-svg-src="../svg/whiteMenu.svg")
+    md-fab-actions
+      md-button.md-raised.menuButton(ng-click="oc.newPost()") 添加结点
+      md-button.md-raised.menuButton(ng-click="oc.timeCapsule()") 时间囊
