--- a/code/source/sass/others.sass
+++ b/code/source/sass/others.sass
@@ -42,8 +42,11 @@
         padding: 0px 0px 0px 16px
 
   .cardImg
-    height: 50%
+    height: 212px
+    background-repeat: no-repeat
+    background-position: center center
     background-size: cover
+    -webkit-background-size: cover
 
   md-card-content
     color: #525252 !important
@@ -55,7 +58,7 @@
     position: fixed
     right: 12px
     bottom: 12px
-		
+
     .menuButton
       padding: 0px !important
       font-weight: normal
