--- a/code/static/css/others.css
+++ b/code/static/css/others.css
@@ -33,8 +33,11 @@
         line-height: 40px;
         padding: 0px 0px 0px 16px; }
   .othersBackground .cardImg {
-    height: 50%;
-    background-size: cover; }
+    height: 212px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    -webkit-background-size: cover; }
   .othersBackground md-card-content {
     color: #525252 !important; }
     .othersBackground md-card-content p {
